fix issues with alignment

--- a/odin/landing-page.css
+++ b/odin/landing-page.css
@@ -8,16 +8,21 @@
 display: flex;
 background-color: #1f2937;
 align-items: center;
+justify-content: center;
+gap: 450px;
 }
 .logo{
   font-size: 24px; 
   color: #f9faf8; 
   font-weight: 700;
-  flex-grow: 1;
+  display: flex;
+  flex: none;
 }
 li{
 color: #e5e7eb;
 font-size: 11px;
+display: flex;
+flex: none;
 }
 ul{
     list-style: none;
@@ -31,11 +36,13 @@ ul{
     align-items: center;
     gap: 20px;
     padding: 50px 0 50px 0;
+    justify-content: center;
+    gap: 50px;
 }
 .he-text{
     display: flex;
     flex-direction: column;
-    flex: 1
+    flex: none;
 }
 .main-text{
     font-size: 48px;
@@ -64,9 +71,10 @@ button{
     align-items: center;
     justify-content: center;
     background-color: #72808a;
-    flex: 1;
+    flex: none;
     height: 200px;
     border-radius: 10px;
+    padding: 5px 60px;
 }
 .random{
     display: flex;
@@ -93,5 +101,7 @@ img{
 }
 .box{
     margin: 20px;
-    height: 100px;
+    height: 50px;
+    width: 130px;
+    flex: none;
 }
